# jd-query-graph

./: .gitignore  AGENTS.md  README.md  TODOs.md  docker-compose.yml  pyproject.toml
configs/: relationships.yaml  taxonomy.yaml
docs/superpowers/plans/: 2026-07-03-initial-scaffold.md  2026-07-03-neo4j-graphrag-query-term-graph-phase1.md  2026-07-03-neo4j-graphrag-query-term-graph.md  2026-07-06-neo4j-write-read-loop.md
docs/superpowers/specs/: 2026-07-03-neo4j-graphrag-query-term-graph-design.md  2026-07-06-neo4j-write-read-loop-design.md
src/jd_query_graph/: __init__.py  artifacts.py  cli.py  config.py  corpus.py  extraction.py  jd_input.py  neo4j_io.py  query.py  recall.py  schema.py
tests/: test_artifacts.py  test_cli.py  test_config_models.py  test_corpus.py  test_extraction.py  test_jd_records.py  test_neo4j_integration.py  test_neo4j_io.py  test_query.py  test_recall.py  test_schema_export.py
