[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jd-query-graph"
version = "0.1.0"
description = "Internal Neo4j-backed JD query term graph builder and lookup tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "neo4j>=5.28",
    "neo4j-graphrag>=1.18",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
jd-query-graph = "jd_query_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jd_query_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "PT"]

